--- a/后台代码/Garleton/.classpath
+++ b/后台代码/Garleton/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/applicationContext.xml"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ezmorph-1[1].0.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-lib-2.2.3-jdk15.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
